// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile z huge 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "paddingHorizontal": 10,
      "paddingVertical": 15,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
        "paddingRight": 20,
        "width": "41%",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <View>
          <View
            style={
              Object {
                "marginBottom": 5,
              }
            }
          >
            <ArticleLabel
              color="#005B8D"
              isVideo={false}
              title="label"
            />
          </View>
          <Text
            accessibilityRole="header"
            aria-level="3"
            style={
              Object {
                "color": "#333333",
                "fontFamily": "TimesModern-Bold",
                "fontSize": 45,
                "fontWeight": "400",
                "lineHeight": 45,
                "marginBottom": 10,
              }
            }
          >
            This is tile headline
          </Text>
          <ArticleFlags
            flags={
              Array [
                Object {
                  "expiryTime": "2030-03-14T12:00:00.000Z",
                  "type": "EXCLUSIVE",
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
  <Image
    aspectRatio={1.5}
    fill={true}
    style={
      Object {
        "width": "59%",
      }
    }
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
  />
</Link>
`;

exports[`tile z wide 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "paddingHorizontal": 10,
      "paddingVertical": 15,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
        "paddingRight": 20,
        "width": "41%",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <View>
          <View
            style={
              Object {
                "marginBottom": 5,
              }
            }
          >
            <ArticleLabel
              color="#005B8D"
              isVideo={false}
              title="label"
            />
          </View>
          <Text
            accessibilityRole="header"
            aria-level="3"
            style={
              Object {
                "color": "#333333",
                "fontFamily": "TimesModern-Bold",
                "fontSize": 40,
                "fontWeight": "400",
                "lineHeight": 40,
                "marginBottom": 10,
              }
            }
          >
            This is tile headline
          </Text>
          <ArticleFlags
            flags={
              Array [
                Object {
                  "expiryTime": "2030-03-14T12:00:00.000Z",
                  "type": "EXCLUSIVE",
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
  <Image
    aspectRatio={1.5}
    fill={true}
    style={
      Object {
        "width": "59%",
      }
    }
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
  />
</Link>
`;

exports[`tile z without breakpoint should be like wide 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "paddingHorizontal": 10,
      "paddingVertical": 15,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
        "paddingRight": 20,
        "width": "41%",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <View>
          <View
            style={
              Object {
                "marginBottom": 5,
              }
            }
          >
            <ArticleLabel
              color="#005B8D"
              isVideo={false}
              title="label"
            />
          </View>
          <Text
            accessibilityRole="header"
            aria-level="3"
            style={
              Object {
                "color": "#333333",
                "fontFamily": "TimesModern-Bold",
                "fontSize": 40,
                "fontWeight": "400",
                "lineHeight": 40,
                "marginBottom": 10,
              }
            }
          >
            This is tile headline
          </Text>
          <ArticleFlags
            flags={
              Array [
                Object {
                  "expiryTime": "2030-03-14T12:00:00.000Z",
                  "type": "EXCLUSIVE",
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
  <Image
    aspectRatio={1.5}
    fill={true}
    style={
      Object {
        "width": "59%",
      }
    }
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
  />
</Link>
`;
